classDiagram
    direction LR
    class User {
        <<Entity>>
        + UserId : string
        + FirstName : string?
        + LastName : string?
        + Email : string?
        + Phone : string?
        + AvatarUrl : string?
        + FlagCount : int?
        + IsDeleted : bool?
        + CreatedAt : DateTime?
        + UpdatedAt : DateTime?
    }

    class Account {
        <<Entity>>
        + AccountId : string
        + UserId : string?
        + Provider : string?
        + Username : string?
        + ProviderUserId : string?
        + PasswordHash : string?
        + MustChangePassword : bool?
        + IsPasswordSet : bool?
        + Status : string?
        + LastLoginAt : DateTime?
        + IsDeleted : bool?
        + CreatedAt : DateTime?
        + UpdatedAt : DateTime?
    }

    class Notification {
        <<Entity>>
        + NotificationId : string
        + UserId : string?
        + Title : string?
        + Message : string?
        + Type : string?
        + ReferenceId : string?
        + IsRead : bool?
        + ReadAt : DateTime?
        + CreatedAt : DateTime?
        + IsDeleted : bool?
    }

    Account "1..*" --> "1" User
    Notification "0..*" --> "1" User

    class NotificationDto {
        + NotificationId : string
        + Title : string
        + Message : string
        + Type : string
        + ReferenceId : string
        + IsRead : bool
        + CreatedAt : DateTime
    }

    class NotificationHub {
        <<Hub>>
        - _notificationService : INotificationService
        + OnConnectedAsync() : Task
        + GetMyNotifications() : Task
    }

    class INotificationService {
        <<Interface>>
        + GetMyNotificationsAsync(accountId : string) : Task~IEnumerable[NotificationDto]~
    }

    class NotificationService {
        <<Service>>
        - _notificationRepo : INotificationRepository
        - _accountRepo : IAccountRepository
        + GetMyNotificationsAsync(accountId : string) : Task~IEnumerable[NotificationDto]~
    }

    class IAccountRepository {
        <<Interface>>
        + Query() : IQueryable~Account~
    }

    class AccountRepository {
        <<Repository>>
        - _context : AppDbContext
        + Query() : IQueryable~Account~
    }

    class INotificationRepository {
        <<Interface>>
        + Query() : IQueryable~Notification~
    }

    class NotificationRepository {
        <<Repository>>
        - _context : AppDbContext
        + Query() : IQueryable~Notification~
    }

    AccountRepository --> Account
    IAccountRepository <|.. AccountRepository
    NotificationRepository --> Notification
    INotificationRepository <|.. NotificationRepository
    NotificationService --> IAccountRepository
    NotificationService --> INotificationRepository
    INotificationService <|.. NotificationService
    NotificationHub --> INotificationService
    NotificationHub --> NotificationDto
    INotificationService --> NotificationDto
    NotificationService --> NotificationDto

    style User fill:#ffffff,stroke:#000000,color:#000000
    style Account fill:#ffffff,stroke:#000000,color:#000000
    style Notification fill:#ffffff,stroke:#000000,color:#000000
    style NotificationDto fill:#ffffff,stroke:#000000,color:#000000
    style NotificationHub fill:#dae8fc,stroke:#6c8ebf,color:#000000
    style INotificationService fill:#ffffff,stroke:#000000,color:#000000
    style NotificationService fill:#ffffff,stroke:#000000,color:#000000
    style IAccountRepository fill:#ffffff,stroke:#000000,color:#000000
    style AccountRepository fill:#ffffff,stroke:#000000,color:#000000
    style INotificationRepository fill:#ffffff,stroke:#000000,color:#000000
    style NotificationRepository fill:#ffffff,stroke:#000000,color:#000000
